# rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: RAG评测与观测指南.md  eval_dataset_template.jsonl  eval_dataset_v4.jsonl  工程化改造说明.md
rag/: __init__.py  api.py  chunker.py  config.py  contextual.py  embedder.py  engine.py  evaluation.py  learn_docling.py  mcp.py  models.py  parser.py  reranker.py  service.py  skill.py  vector_store.py
tests/: conftest.py  integration_helpers.py  test_adapters.py  test_api.py  test_api_integration.py  test_chunker.py  test_config.py  test_contextual.py  test_embedder.py  test_engine.py  test_evaluation.py  test_models.py  test_parser.py  test_sdk.py  test_sdk_integration.py  test_vector_store.py
