[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "industrial-rag"
version = "2.0.0"
description = "工业级 RAG Pipeline（模块化重构版）"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.9",
    "openai>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "tqdm>=4.0",
    "loguru>=0.7",
    "python-dotenv>=1.0",
    "diskcache>=5.6",      # Contextual Retrieval 本地缓存
]

[project.optional-dependencies]
parsers = [
    "docling",
    "unstructured[all-docs]",
]
chinese = [
    "jieba",
]
redis = [
    "redis>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
all = [
    "industrial-rag[parsers,chinese,redis,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["rag"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
